--- a/app/src/main/res/layout/item_on_boarding.xml
+++ b/app/src/main/res/layout/item_on_boarding.xml
@@ -11,14 +11,15 @@
         android:scaleType="centerCrop"
         android:src="@mipmap/ic_launcher"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="18dp"
         android:gravity="center"
         android:text="Title"
         android:textSize="30sp"
@@ -34,7 +35,7 @@
         android:layout_marginTop="10dp"
         android:gravity="center"
         android:text="Description"
-        android:textSize="30sp"
+        android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -47,7 +48,6 @@
         android:layout_gravity="center"
         android:layout_marginHorizontal="30dp"
         android:layout_marginVertical="30dp"
-        android:layout_marginBottom="20dp"
         android:text="Get Start"
         android:textAllCaps="false"
         android:textColor="?android:actionBarWidgetTheme"
